--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^1.2.0"
+    "@rocketseat/eslint-config": "^1.2.0",
+    "clsx": "^1.2.1"
   }
 }
