--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.4",
     "clsx": "^1.2.1",
     "next": "13.4.7",
     "react": "18.2.0",
