Add: RdProject Inputs Component showcase

--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
+    "@phosphor-icons/react": "^2.0.13",
     "@radix-ui/react-dialog": "^1.0.4",
     "clsx": "^1.2.1",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^1.13.2"
+    "react-hook-form": "^7.46.2",
+    "sharp": "^0.32.6",
+    "tailwind-merge": "^1.13.2",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
