--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@phosphor-icons/react": "^2.0.13",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-select": "^2.0.0",
     "clsx": "^1.2.1",
     "next": "13.4.7",
     "react": "18.2.0",
