--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
