--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
-    "next": "13.4.7",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.284.0",
+    "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
@@ -34,7 +37,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "^8.43.0",
     "eslint-config-next": "13.4.7",
-    "postcss": "8.4.24",
+    "postcss": "^8.4.31",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
