--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.284.0",
     "next": "^13.5.4",
+    "next-intl": "^2.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
