--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
+    "server-only": "^0.0.1",
     "sharp": "^0.32.6",
     "tailwind-merge": "^1.13.2",
     "zod": "^3.22.2"
